// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test OrderAverageReviewTime should match snapshot 1`] = `
<div>
  <div
    class="ant-card ant-card-loading ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          reportStatistics.orderAverageReviewTime.title
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-card-loading-content"
      >
        <div
          class="ant-row"
          style="margin-left: -4px; margin-right: -4px;"
        >
          <div
            class="ant-col ant-col-22"
            style="padding-left: 4px; padding-right: 4px;"
          >
            <div
              class="ant-card-loading-block"
            />
          </div>
        </div>
        <div
          class="ant-row"
          style="margin-left: -4px; margin-right: -4px;"
        >
          <div
            class="ant-col ant-col-8"
            style="padding-left: 4px; padding-right: 4px;"
          >
            <div
              class="ant-card-loading-block"
            />
          </div>
          <div
            class="ant-col ant-col-15"
            style="padding-left: 4px; padding-right: 4px;"
          >
            <div
              class="ant-card-loading-block"
            />
          </div>
        </div>
        <div
          class="ant-row"
          style="margin-left: -4px; margin-right: -4px;"
        >
          <div
            class="ant-col ant-col-6"
            style="padding-left: 4px; padding-right: 4px;"
          >
            <div
              class="ant-card-loading-block"
            />
          </div>
          <div
            class="ant-col ant-col-18"
            style="padding-left: 4px; padding-right: 4px;"
          >
            <div
              class="ant-card-loading-block"
            />
          </div>
        </div>
        <div
          class="ant-row"
          style="margin-left: -4px; margin-right: -4px;"
        >
          <div
            class="ant-col ant-col-13"
            style="padding-left: 4px; padding-right: 4px;"
          >
            <div
              class="ant-card-loading-block"
            />
          </div>
          <div
            class="ant-col ant-col-9"
            style="padding-left: 4px; padding-right: 4px;"
          >
            <div
              class="ant-card-loading-block"
            />
          </div>
        </div>
        <div
          class="ant-row"
          style="margin-left: -4px; margin-right: -4px;"
        >
          <div
            class="ant-col ant-col-4"
            style="padding-left: 4px; padding-right: 4px;"
          >
            <div
              class="ant-card-loading-block"
            />
          </div>
          <div
            class="ant-col ant-col-3"
            style="padding-left: 4px; padding-right: 4px;"
          >
            <div
              class="ant-card-loading-block"
            />
          </div>
          <div
            class="ant-col ant-col-16"
            style="padding-left: 4px; padding-right: 4px;"
          >
            <div
              class="ant-card-loading-block"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test OrderAverageReviewTime should match snapshot 2`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          reportStatistics.orderAverageReviewTime.title
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="statistics-value-style"
      >
        <span>
          1h54min
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`test OrderAverageReviewTime should match snapshot when request goes wrong 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          reportStatistics.orderAverageReviewTime.title
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <span
        class="ant-typography ant-typography-danger"
      >
        error
      </span>
    </div>
  </div>
</div>
`;
